--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@ body {
 .A {
   background-color: #1F2937;
   display: flex;
-  flex: 0 0 auto;
+  flex: 0 1 auto;
+  justify-content: center;
   margin: 0;
-  padding: 60px 100px;
+  padding: 40px 100px;
   gap: 15px;
 }
 
@@ -53,6 +54,7 @@ body {
   font-weight: 900;
   color: #F9FAF8;
   margin: 0;
+  margin-left: auto;
   padding: 0;
 }
 
@@ -60,6 +62,7 @@ body {
   font-size: 18px;
   color: #e5e7ebb4;
   margin: 0;
+  width: 500px;
 }
 
 .A button {
@@ -67,12 +70,17 @@ body {
   border-radius: 6px;
   color: white;
   background-color: #3882F6;
+  font-weight: 200;
   margin: 10px 0;
   padding: 6px 30px;  
 }
 
 .A img {
+  display: flex;
+  flex: 0 1 1;
   border-radius: 20px;
+  margin: 0;
+  margin-right: auto;
 }
 
 /* Section B */
