--- a/style.css
+++ b/style.css
@@ -77,7 +77,11 @@ body {
 
 .A img {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex: 0 1 1;
+  background: #818a9e;
+  border: 2px solid #1F2937;
   border-radius: 20px;
   margin: 0;
   margin-right: auto;
@@ -129,8 +133,12 @@ body {
 
 .B img {
   display: flex;
+  justify-content: center;
+  align-items: center;
   height: 150px;
   width: 150px;
+  background-color: #818a9e;
+  border: 2px solid #818a9e;
   border-radius: 15px;
   margin: 0;
   padding: 0;
