--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
   display: flex;
   flex: 0 1 auto;
   justify-content: center;
+  align-items: center;
   margin: 0;
   padding: 40px 100px;
   gap: 15px;
